--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-*.js
-!jest.config.js
-*.d.ts
-node_modules
+# Terraform files
+*.tfstate
+*.tfstate.*
+crash.log
+override.tf
+override.tf.json
+*.tfvars
+*.tfvars.json
 
-# CDK asset staging directory
-.cdk.staging
-cdk.out
+# Terraform directory
+.terraform/
+
+.terraform.lock.hcl
